# catsanddogs

./: cats.ipynb  dogs.ipynb  experimenting.ipynb  parse.py  pyproject.toml
data/: .~lock.Feline_dataset.xlsx#  conversion.csv  conversion_cats.csv  conversion_dogs.csv  pf_data.csv
