[tool.poetry]
name = "catsanddogs"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.misitano@jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
pandas = "^1.4.3"
numpy = "^1.23.0"
openpyxl = "^3.0.10"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
desdeo-tools = "^1.7.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
